Training template selection edit

--- a/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
+++ b/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
@@ -184,7 +184,7 @@ Once you've registered your model, let's select a documentation template. A temp
 
 1. Click on the name of the model you registered earlier.
 2. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select **Documentation**.
-3. Under **[template]{.smallcaps}**, select `Binary classification`.
+3. Under [create document]{.smallcaps}, select `Binary classification` from the **[template]{.smallcaps}** drop-down menu.
 4. Click **Use Template** to apply the template.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
