--- a/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
+++ b/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
@@ -208,7 +208,7 @@ We'll need this documentation template later for reference as we draft our valid
 
 1. Click on the name of the model you registered earlier.
 2. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select **Documentation**.
-3. Under **[template]{.smallcaps}**, select `Binary classification`.
+3. Under [create document]{.smallcaps}, select `Binary classification` from the **[template]{.smallcaps}** drop-down menu.
 4. Click **Use Template** to apply the template.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
@@ -226,7 +226,7 @@ Next, let's select a validation report template. A template predefines sections 
 
 1. Click on the name of the model you registered earlier.
 2. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select **Validation Report**.
-3. Under **[template]{.smallcaps}**, select `Generic Validation Report`.
+3. Under [create document]{.smallcaps}, select `Generic Validation Report` from the **[template]{.smallcaps}** drop-down menu.
 4. Click **Use Template** to apply the template.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
