Fixing broken anchors & links & formatting

--- a/site/guide/model-inventory/edit-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/edit-model-inventory-fields.qmd
@@ -93,7 +93,7 @@ To work with attachments on models, first add an attachment inventory field.[^6]
 [^6]: [Manage model inventory fields](manage-model-inventory-fields.qmd#inventory-field-types)
 
 :::: {.content-visible when-format="html" when-meta="includes.pdf-context"}
-[^7]: [Work with content blocks](/guide/model-documentation/work-with-content-blocks.qmd#generate-text-with-ai-beta)
+[^7]: [Work with content blocks](/guide/model-documentation/work-with-content-blocks.qmd#generate-content)
 
 :::
 
