--- a/site/guide/model-documentation/work-with-content-blocks.qmd
+++ b/site/guide/model-documentation/work-with-content-blocks.qmd
@@ -47,7 +47,7 @@ The content editing toolbar is a rich text editor that enables you to:
 You can also use the toolbar to suggest changes, save named versions of content, and leave comments.[^3] 
 
 ::: {.callout title="Stuck on where to start?"}
-Use {{< var vm.product >}} to assist you with generating content via AI!^[[Generate with AI (BETA)](#generate-text-with-ai-beta)]
+Use {{< var vm.product >}} to assist you with generating content via AI!^[[Generate content drafts with AI](#generate-content)]
 :::
 
 ::: {.attn}
@@ -110,6 +110,8 @@ While editing a simple text block, you can insert math equations using the formu
 
 3. Click **[{{< fa check >}}]{.green}** to add the equation to your content block.
 
+<span id="generate-content"></span>
+
 ### Generate content drafts with AI
 
 While editing a simple text block, you can have {{< var vm.product >}} assist you with generating content drafts.
@@ -118,7 +120,18 @@ While editing a simple text block, you can have {{< var vm.product >}} assist yo
 Generating content drafts works best after you've logged tests with the {{< var validmind.developer >}},[^11] as existing test descriptions provide more context for {{< var vm.product >}}'s content builder to draw upon.
 :::
 
-#### What context is available in content blocks?
+To generate content drafts:
+<!-- PDF CONTEXT DOCUMENTS ARE BEHIND A FEATURE FLAG -->
+
+{{< include content_blocks/_generate-with-ai.qmd >}}
+
+When generating content drafts with AI, accepted versions and edits are retained in your {{< fa wifi >}} Model Activity[^12] just like other updates to your documents.
+
+<br>
+
+::: {.callout-button .pl4 .nt4}
+::: {.callout collapse="true" appearance="minimal"}
+### What context is available in content blocks?
 
 When you generate content, the content builder uses the following context:
 
@@ -131,12 +144,8 @@ When you generate content, the content builder uses the following context:
    - Model inventory fields
 - Model document content — Text blocks and test result descriptions from your document (figures and tables are not included)
 
-To generate content drafts:
-<!-- PDF CONTEXT DOCUMENTS ARE BEHIND A FEATURE FLAG -->
-
-{{< include content_blocks/_generate-with-ai.qmd >}}
-
-When generating content drafts with AI, accepted versions and edits are retained in your {{< fa wifi >}} Model Activity[^12] just like other updates to your documents.
+:::
+:::
 
 ## Remove content blocks
 
