--- a/site/guide/model-documentation/work-with-content-blocks.qmd
+++ b/site/guide/model-documentation/work-with-content-blocks.qmd
@@ -117,7 +117,7 @@ While editing a simple text block, you can insert math equations using the formu
 While editing a simple text block, you can have {{< var vm.product >}} assist you with generating content drafts.
 
 ::: {.callout title="Have you logged your tests?"}
-Generating content drafts works best after you've logged tests with the {{< var validmind.developer >}},[^11] as existing test descriptions provide more context for {{< var vm.product >}}'s content builder to draw upon.
+Generating content drafts works best after you've logged tests with the {{< var validmind.developer >}},[^11] as existing test descriptions and results provide more context for the {{< var vm.product >}} AI Content Builder to draw upon.
 :::
 
 To generate content drafts:
