--- a/site/releases/breaking-changes/breaking-changes.qmd
+++ b/site/releases/breaking-changes/breaking-changes.qmd
@@ -3,6 +3,8 @@ title: "Breaking changes and deprecations"
 date: last-modified
 categories: ["breaking changes", "deprecations"]
 draft: true
+# REMOVE AFTER NEW PAGE IS FINISHED
+search: false
 ---
 
 deprecation
