docs process: Deprecate old breaking changes & deprecations releases page (#1183)
* Removing breaking-changes files & script

* Removing R setup from GitHub workflows

* Edit

--- a/site/releases/breaking-changes/breaking-changes.qmd
+++ b/site/releases/breaking-changes/breaking-changes.qmd
@@ -1,18 +1,11 @@
 ---
 title: "Breaking changes and deprecations"
 date: last-modified
-# DON'T DISPLAY THE SOURCE CODE FOR THE TABLES ON THE PAGE
-execute:
-  echo: false
 categories: ["breaking changes", "deprecations"]
+draft: true
+# REMOVE AFTER NEW PAGE IS FINISHED
+search: false
 ---
-
-```{r import-script}
-# Import custom `breaking_changes` script
-source("breaking_changes.R")
-```
-
-## Definitions
 
 deprecation
 : - Feature not recommended for use.
@@ -22,16 +15,3 @@ breaking change
 : - Feature will be removed in a future major release.
 - Requires users to make a corresponding change to their code, settings, or workflows.
 
-## History
-
-<!-- CURRENT YEAR START -->
-
-### 2024
-
-```{r 2024}
-## Render 2024.csv
-my_data_2024 <- read_csv_data(2024)
-my_data_2024 <- convert_markdown_links(my_data_2024)
-my_data_2024 <- format_dates_in_data(my_data_2024)
-render_table(my_data_2024)
-```
